fixed alignment

--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -178,10 +178,11 @@
 }
 
 .image-grid {
-  margin-top: 30px;
+  margin-top: 40px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 28px;
+  gap: 20px;
+  align-items: center;
 }
 
 .image-item {
