--- a/src/components/LogoName/LogoName.css
+++ b/src/components/LogoName/LogoName.css
@@ -3,10 +3,17 @@
     display: inline-block;
 }
 
-.logo-image {
+/* .logo-image {
     width: 50px;
     height: 50px;
     display: block;
+    transition: all 0.3s;
+} */
+
+.logo-image {
+    width: 80%;
+    height: auto;
+    object-fit: cover;
     transition: all 0.3s;
 }
 
